--- a/genelYapı/index.html
+++ b/genelYapı/index.html
@@ -14,54 +14,37 @@
 <body class="bg-dark">
     <nav class="navbar navbar-expand-lg navbar-light bg-light container">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link active" aria-current="page" href="#">HTML</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  CSS
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">Css-3</a></li>
+                  <li><a class="dropdown-item" href="#">Bootstrap-5</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  JAVASİCRİPT
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Javasicript</a></li>
+                  <li><a class="dropdown-item" href="#">---</a></li>
                 </ul>
               </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input class="form-control me-2" type="search" placeholder="Arama yap" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">ARA</button>
             </form>
           </div>
         </div>
       </nav>
-
-
-
-
-
-
-
-    <!-- <div class="container">
-        <nav class="mynavbar">
-            <ul class="d-flex justify-content-around fs-5 mt-3">
-                <li><a href="#">Html-5</a></li>
-                <li><a href="#">Css-3</a></li>
-                <li><a href="#">Bootstrap-5</a></li>
-                <li><a href="#">Javasicript</a></li>
-            </ul>
-        </nav>
-    </div> -->
      <!-- bootsrap cdn-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
